# ethereal-bot

./: .gitignore  Cargo.toml  Settings.toml.sample
.cargo-husky/hooks/: pre-commit  pre-push
src/: error.rs  lib.rs  models.rs
src/backend/: live.rs  mod.rs  paper.rs
src/executor/: error.rs  live.rs  mod.rs  paper.rs
src/logging/: config.rs  mod.rs  targets.rs
src/models/: common.rs  contracts.rs  dto.rs  mod.rs  util.rs
src/runtime/: mod.rs
src/settings/: config.rs  mod.rs
src/signer/: mod.rs  settings.rs
src/tests/: init.rs  latency.rs  mod.rs  ws_samples.rs
src/trading/: mod.rs  policy.rs  settings.rs  state.rs
