[package]
name = "ethereal-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.7.3", features = ["eip712"] }
alloy-contract = "1.7.3"
alloy-sol-types = "1.5.7"
bigdecimal = { version = "0.4.10", features = ["serde"] }
config = "0.15.19"
dashmap = "6.1.0"
futures-util = "0.3.32"
hex = { version = "0.4.3", features = ["serde"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = "1.49.0"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = [
    "env-filter",
    "fmt",
    "json",
] }
url = "2.5.8"
uuid = { version = "1.21.0", features = ["serde", "v4"] }

[dev-dependencies]
cargo-husky = { version = "1.5.0", features = ["user-hooks"] }
